# viberouter

./: .env.example  .gitignore  CHANGELOG.md  DOCUMENTATION.md  Dockerfile  LICENSE  PROJECT_STATUS.md  README.md  config.yaml.example  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
scripts/: publish.sh
src/viberouter/: __init__.py  __main__.py  api.py  cli.py  config.py  core.py  dashboard.html  gb10_config.py  llm_interface.py  providers.py  router.py
tests/: test_api.py  test_core.py  test_router.py
